# pypanda-plugins

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: README.md  main.yml
plugins/: CallstackTracker.py  FileFaker.py  FileHook.py  IoctlFaker.py  ModeFilter.py  ProcWriteCapture.py  __init__.py  bb_count.py  calltree.py  proc_graph.py  rwreplace.py  socketsnoop.py
plugins/CallstackTracker/: CallstackTracker.py  call_stack_info.py
plugins/proc_graph/: README.md  proc_graph.py  pypanda_pg.py
scripts/: IoctlFaker.py  ProcWriteCapture.py  __init__.py
src/pandarepyplugins/: CallstackTracker.py  FileFaker.py  FileHallucinator.py  IoctlFaker.py  __init__.py  calltree.py  loginforcer.py  rwreplace.py  snaptracker.py  socketsnoop.py
src/pandarepyplugins/proc_graph/: proc_graph.py  requirements.txt
src/pyplugins/: __init__.py  netcb.py  rwlog.py
src/pyplugins/proc_graph/templates/: svgtest.html
