[metadata]
name = panda_pyplugins
version = 0.0.1
author = Andrew Fasano
author_email = fasano@mit.edu
description = A collection of reusable PyPlugins for PANDA.re
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/panda-re/pypanda-plugins
project_urls =
    Upstream PANDA = https://github.com/panda-re/panda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyplugins
