[metadata]
name = pandarepyplugins
version = 0.1
author = Andrew Fasano
author_email = fasano@mit.edu
description = A collection of reusable PyPlugins for PANDA.re
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/panda-re/pypanda-plugins
project_urls =
    Upstream PANDA = https://github.com/panda-re/panda

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pandare >= 0.1.1.5

[options.packages.find]
where = src
